src/objects/actionHub__Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>actionHub Mapping</description>
    <fields>
        <fullName>actionHub__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__Input__c</fullName>
        <label>Input</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__MappingName__c</fullName>
        <label>Mapping Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Output__c</fullName>
        <label>Output</label>
        <type>TextArea</type>
    </fields>
    <label>Mapping</label>
</CustomObject>